--- a/zapp-config.json
+++ b/zapp-config.json
@@ -3,6 +3,6 @@
     "labelRegex": "require-(foreport|backport):(.+)",
     "releaseBranchRegex": [ "release/(.+)", "(master)" ],
     "featureBranchRegex": [ "feature/(.+)", "task/(.+)", "chore/(.+)" ],
-    "portPattern": [ "task/{0}-{1}_{2}", "{0}/{2}/{1}" ]
+    "portBranchPattern": [ "task/{0}-{1}_{2}", "{0}/{2}/{1}" ]
   }
 }
