--- a/.github/workflows/pr-jira.yml
+++ b/.github/workflows/pr-jira.yml
@@ -12,7 +12,7 @@ jobs:
   jira_pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: cchantep/probot-jira@ghaction-1.0.x
+      - uses: cchantep/probot-jira@e3e14f0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PERSONAL_TOKEN_VALUE: ${{ secrets.PERSONAL_TOKEN_VALUE }}
