--- a/.github/workflows/pr-jira.yml
+++ b/.github/workflows/pr-jira.yml
@@ -5,6 +5,7 @@ on:
     types: ['milestoned', 'demilestoned']
   pull_request:
     types: ['opened', 'edited', 'synchronize', 'reopened', 'closed']
+  repository_dispatch:
   schedule:
     - cron: '5 * * * *'
 
